<LinearLayout xmlns:android1="http://schemas.android.com/apk/res/android"

    android1:layout_width="fill_parent"
    android1:layout_height="fill_parent"
    android1:background="@drawable/portfolio_1"
   >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ai"
                android:background="#22984A"

                />

            <View
                android:layout_width="fill_parent"
                android:background="#22984A"
                android:layout_height="2dip"
                android:layout_marginBottom="3dip"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/enter_src"
                        android:textSize="21sp"
                        android:text="From "
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:textStyle="bold"/>


                   <!-- <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:id="@+id/pick_src" />-->

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/enter_dest"
                        android:textSize="21sp"
                        android:text="To  "
                        android:textStyle="bold"
                        android:textColor="#000"/>

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView2"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:textStyle="bold"/>



                  <!--  <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:id="@+id/pick_dest" />-->

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:weightSum="10">
                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:id="@+id/enter_adult"
                        android:textSize="21sp"
                        android:text="@string/enter_adult"
                        android:textStyle="bold"
                        android:textColor="#000"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/enter_adult1"
                        android:text="1"
                        android:textStyle="bold"
                        android:textSize="34sp"
                        android:inputType="number"
                        />

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:id="@+id/enter_infant"
                        android:textSize="21sp"
                        android:text="@string/enter_infant"
                        android:textStyle="bold"
                        android:textColor="#000"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/enter_infant1"
                        android:text="0"
                        android:maxLength="1"
                        android:textStyle="bold"
                        android:textSize="34sp"
                        android:inputType="number"/>

                </TableRow>

                <!--<TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/enter_infant"
                        android:textSize="17sp"
                        android:text="@string/enter_infant"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/enter_infant1"
                        android:textSize="17sp"
                        android:text="0"
                        android:maxLength="1"
                        android:inputType="number"/>

                </TableRow>-->

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:weightSum="10"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Flight_txt"
                        android:textSize="21sp"
                        android:text="Departure"
                        android:layout_weight="6"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <EditText
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_in_date"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_weight="3"/>

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:id="@+id/btn_date"
                        android:background="@drawable/calendar_icon"
                        android:layout_weight="1"
                        />


                    <!--<EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/in_date"
                        android:layout_marginTop="82dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />-->

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:weightSum="10">

                    <!--<Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Set Return Date"
                        android:id="@+id/btn_return_date"
                        android:layout_alignBottom="@+id/in_date"
                        android:layout_toRightOf="@+id/in_date"
                        android:layout_toEndOf="@+id/in_date"
                        android:background="#22984A"/>

                    <EditText
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_return_date"
                        android:textSize="17sp"/>
                    android:layout_weight="8"-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Flight_return_txt"
                        android:textSize="17sp"
                        android:text="Return  "
                        android:layout_weight="5"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <EditText
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_return_date"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_weight="4"/>

                    <Button
                        android:layout_width="10dp"
                        android:layout_height="40dp"
                        android:id="@+id/btn_return_date"
                        android:background="@drawable/calendar_icon"
                        android:layout_weight="1"
                        />


                    </TableRow>

            </TableLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_map"
                    android:textSize="17sp"
                    android:paddingLeft="5dip"
                    android:layout_gravity="center_vertical"
                    android:text="@string/show_map"
                    android:textStyle="bold"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_map_ans"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_search"
                    android:textSize="17sp"
                    android:paddingLeft="5dip"
                    android:layout_gravity="center_vertical"
                    android:text="@string/save_search"
                    android:textStyle="bold"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_search_ans" />

            </LinearLayout>


            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tablerowbutton1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_select"
                    android:textSize="17sp"
                    android:layout_marginLeft="5dip"
                    android:layout_span="1"
                    android:background="#22984A"
                    android:onClick="onButtonClicked"/>

                <View
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_gravity="center"
                    android:layout_width="2dip"
                    android:background="#22984A"
                    android:layout_height="45dip" />

                <Button
                    android:id="@+id/show_saved_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_saved_search"
                    android:textSize="17sp"
                    android:layout_span="1"
                    android:layout_marginRight="5dip"
                    android:background="#22984A"
                    android:onClick="onShowSavedSearchButtonClicked"/>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

            </LinearLayout>

        </LinearLayout>

</LinearLayout>

